z-index fix for backdrop

--- a/less/pattern.modal.less
+++ b/less/pattern.modal.less
@@ -13,7 +13,12 @@
 }
 
 .modal {
+    z-index: 1040;
     .modal-header {
         min-height: 25px;
     }
+}
+
+.backdrop {
+    z-index: 1030;
 }
